--- a/Python_RankedChoice.ipynb
+++ b/Python_RankedChoice.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2bfcafb5",
    "metadata": {
     "deletable": false,
@@ -91,9 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "candidates = ['Aragorn','Arwen','Bilbo','Elrond','Faramir','Frodo','Gandalf','Gimli','Gollum', 'Legolas','Saruman']"
    ]
   },
   {
@@ -126,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "49202181",
    "metadata": {
     "deletable": false,
@@ -142,11 +140,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Bilbo', 'Gandalf', 'Frodo', 'Legolas', 'Aragorn', 'Faramir', 'Saruman', 'Arwen'], ['Legolas'], ['Gandalf', 'Gollum', 'Frodo', 'Faramir', 'Aragorn', 'Legolas', 'Bilbo', 'Saruman', 'Elrond'], ['Saruman', 'Gimli', 'Faramir', 'Gollum', 'Aragorn'], ['Gollum', 'Arwen', 'Bilbo', 'Saruman', 'Aragorn', 'Frodo', 'Legolas', 'Faramir', 'Gandalf'], ['Saruman'], ['Saruman', 'Legolas', 'Gollum', 'Gimli', 'Gandalf', 'Bilbo', 'Aragorn'], ['Bilbo', 'Frodo', 'Gimli', 'Elrond', 'Gollum', 'Faramir'], ['Bilbo', 'Gollum', 'Faramir', 'Gimli', 'Arwen'], ['Saruman', 'Aragorn'], ['Frodo', 'Gollum', 'Saruman', 'Bilbo'], ['Legolas', 'Arwen', 'Aragorn', 'Elrond'], ['Gollum'], ['Faramir', 'Legolas', 'Gandalf', 'Gollum', 'Bilbo', 'Saruman', 'Arwen', 'Gimli', 'Aragorn', 'Frodo', 'Elrond'], ['Gimli', 'Saruman', 'Faramir', 'Frodo', 'Legolas', 'Gollum'], ['Gimli', 'Faramir', 'Legolas', 'Saruman', 'Aragorn', 'Gandalf', 'Bilbo', 'Arwen', 'Gollum', 'Elrond', 'Frodo'], ['Gandalf', 'Saruman', 'Frodo'], ['Aragorn', 'Faramir', 'Gimli'], ['Faramir', 'Bilbo', 'Arwen', 'Gollum', 'Aragorn', 'Legolas', 'Gimli', 'Gandalf', 'Frodo', 'Saruman', 'Elrond'], ['Saruman', 'Bilbo']]\n"
+     ]
+    }
+   ],
    "source": [
+    "import random\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "ballots = []\n",
+    "ballots_count = 20\n",
+    "\n",
+    "for i in range (0,ballots_count):\n",
+    "    random_number = random.randint(1, len(candidates))\n",
+    "    #random_number = 3\n",
+    "    ballots.append(random.sample(candidates,random_number))\n",
+    "    \n",
+    "print(ballots)    "
    ]
   },
   {
@@ -181,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "104c1b4b",
    "metadata": {
     "deletable": false,
@@ -199,9 +213,16 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def counts(ballotsList):\n",
+    "  results = {}\n",
+    "  for ballot in ballotsList:\n",
+    "      if not ballot:\n",
+    "          continue\n",
+    "      elif ballot[0] not in results:\n",
+    "          results[ballot[0]] = 1\n",
+    "      else:\n",
+    "          results[ballot[0]] += 1\n",
+    "  return results\n"
    ]
   },
   {
@@ -235,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "bc642e7b",
    "metadata": {
     "deletable": false,
@@ -253,9 +274,13 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def create_report(dict):\n",
+    "  text = ''\n",
+    "  text += 'low count: ' + str(min(dict.values())) + '\\n'\n",
+    "  text += 'remove: ' + str(key_list(dict, min(dict.values()))) + '\\n'\n",
+    "  text += 'high count: ' + str(max(dict.values())) + '\\n'\n",
+    "  text += 'lead: ' + str(key_list(dict, max(dict.values()))) + '\\n'\n",
+    "  return text"
    ]
   },
   {
@@ -288,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "60abe392",
    "metadata": {
     "deletable": false,
@@ -306,9 +331,12 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def key_list(dict, num):\n",
+    "  names = []\n",
+    "  for key, value in dict.items():\n",
+    "      if value == num:\n",
+    "          names.append(key)\n",
+    "  return names\n"
    ]
   },
   {
@@ -341,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "b566c49a",
    "metadata": {
     "deletable": false,
@@ -359,9 +387,15 @@
    },
    "outputs": [],
    "source": [
+    "import copy\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def drop_low(ballots_list, remove_list):\n",
+    "  copy_list = copy.deepcopy(ballots_list)\n",
+    "  for ballot in copy_list:\n",
+    "      for item in remove_list:\n",
+    "          if item in ballot:\n",
+    "              ballot.remove(item)\n",
+    "  return copy_list"
    ]
   },
   {
@@ -391,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "36220e32",
    "metadata": {
     "deletable": false,
@@ -407,11 +441,33 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The candidates are:  ['Aragorn', 'Arwen', 'Bilbo', 'Elrond', 'Faramir', 'Frodo', 'Gandalf', 'Gimli', 'Gollum', 'Legolas', 'Saruman']\n",
+      "total ballots:  20\n",
+      "needed to win:  11 \n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "import math\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# get starting information about the vote\n",
+    "print(\"The candidates are: \", candidates)\n",
+    "print(\"total ballots: \", len(ballots))\n",
+    "\n",
+    "# determine how many votes needed to win\n",
+    "if (len(ballots) % 2) == 0:\n",
+    "  majority = math.ceil(len(ballots) * .5) + 1\n",
+    "else:\n",
+    "  majority = math.ceil(len(ballots) * .5)\n",
+    "print(\"needed to win: \", majority, '\\n\\n\\n')"
    ]
   },
   {
@@ -453,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "fe0aed1d",
    "metadata": {
     "deletable": false,
@@ -469,11 +525,113 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results from round  1 - {'Bilbo': 3, 'Legolas': 2, 'Gandalf': 2, 'Saruman': 5, 'Gollum': 2, 'Frodo': 1, 'Faramir': 2, 'Gimli': 2, 'Aragorn': 1}\n",
+      "low count: 1\n",
+      "remove: ['Frodo', 'Aragorn']\n",
+      "high count: 5\n",
+      "lead: ['Saruman']\n",
+      "\n",
+      "no majority yet\n",
+      "\n",
+      "\n",
+      "results from round  2 - {'Bilbo': 3, 'Legolas': 2, 'Gandalf': 2, 'Saruman': 5, 'Gollum': 3, 'Faramir': 3, 'Gimli': 2}\n",
+      "low count: 2\n",
+      "remove: ['Legolas', 'Gandalf', 'Gimli']\n",
+      "high count: 5\n",
+      "lead: ['Saruman']\n",
+      "\n",
+      "no majority yet\n",
+      "\n",
+      "\n",
+      "results from round  3 - {'Bilbo': 3, 'Gollum': 4, 'Saruman': 7, 'Arwen': 1, 'Faramir': 4}\n",
+      "low count: 1\n",
+      "remove: ['Arwen']\n",
+      "high count: 7\n",
+      "lead: ['Saruman']\n",
+      "\n",
+      "no majority yet\n",
+      "\n",
+      "\n",
+      "results from round  4 - {'Bilbo': 3, 'Gollum': 4, 'Saruman': 7, 'Elrond': 1, 'Faramir': 4}\n",
+      "low count: 1\n",
+      "remove: ['Elrond']\n",
+      "high count: 7\n",
+      "lead: ['Saruman']\n",
+      "\n",
+      "no majority yet\n",
+      "\n",
+      "\n",
+      "results from round  5 - {'Bilbo': 3, 'Gollum': 4, 'Saruman': 7, 'Faramir': 4}\n",
+      "low count: 3\n",
+      "remove: ['Bilbo']\n",
+      "high count: 7\n",
+      "lead: ['Saruman']\n",
+      "\n",
+      "no majority yet\n",
+      "\n",
+      "\n",
+      "results from round  6 - {'Faramir': 5, 'Gollum': 6, 'Saruman': 7}\n",
+      "low count: 5\n",
+      "remove: ['Faramir']\n",
+      "high count: 7\n",
+      "lead: ['Saruman']\n",
+      "\n",
+      "no majority yet\n",
+      "\n",
+      "\n",
+      "results from round  7 - {'Saruman': 9, 'Gollum': 8}\n",
+      "low count: 8\n",
+      "remove: ['Gollum']\n",
+      "high count: 9\n",
+      "lead: ['Saruman']\n",
+      "\n",
+      "no majority yet\n",
+      "\n",
+      "\n",
+      "results from round  8 - {'Saruman': 14}\n",
+      "low count: 14\n",
+      "remove: ['Saruman']\n",
+      "high count: 14\n",
+      "lead: ['Saruman']\n",
+      "\n",
+      "The winner is:  ['Saruman']\n"
+     ]
+    }
+   ],
    "source": [
+    "winner = ''\n",
+    "round = 1\n",
+    "adjusted_ballots = []\n",
+    "adjusted_ballots.append(ballots)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "while winner == '':\n",
+    "  # count the ballots\n",
+    "  results = counts(adjusted_ballots[(round-1)])\n",
+    "  print(\"results from round \", round, \"-\", results)\n",
+    "  report = create_report(results)\n",
+    "  print(report)\n",
+    "  \n",
+    "  # check to see if majority reached\n",
+    "  if max(results.values()) >= majority:\n",
+    "      winner = key_list(results, max(results.values()))\n",
+    "  else:\n",
+    "      print(\"no majority yet\\n\\n\")\n",
+    "      \n",
+    "      \n",
+    "  # remove low votes\n",
+    "  remove_list = key_list(results, min(results.values()))\n",
+    "  adjusted = drop_low(adjusted_ballots[(round-1)],remove_list)\n",
+    "  adjusted_ballots.append(adjusted)\n",
+    "  \n",
+    "  # increment the round variable\n",
+    "  round += 1\n",
+    "  \n",
+    "print(\"The winner is: \",winner)"
    ]
   },
   {
@@ -487,7 +645,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
